hopefully fixed theme also dark mode

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Squishy's LilHelper
-email: your-email@example.com
+email: admin@squishy.gg
 description: >- # this means to ignore newlines until "baseurl:"
   LilHelper is a bot run by Squishy, for a few comfy communities. Its goal is to be a fully all round bot, having everything from music playback to levels and moderation features!
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -29,8 +29,10 @@ github_username:  quashera
 
 # Build settings
 remote_theme: just-the-docs/just-the-docs
+
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -55,3 +57,56 @@ plugins:
 collections:
   documentation:
     output: true
+
+# Color scheme supports "light" (default) and "dark"
+color_scheme: dark
+
+kramdown:
+  syntax_highlighter_opts:
+    block:
+      line_numbers: false
+
+callouts_level: quiet # or loud
+callouts:
+  highlight:
+    color: yellow
+  important:
+    title: Important
+    color: blue
+  new:
+    title: New
+    color: green
+  note:
+    title: Note
+    color: purple
+  warning:
+    title: Warning
+    color: red
+
+# Aux links for the upper right navigation
+aux_links:
+  "Bot By Squishy":
+    - "https://squishy-gg"
+
+# Makes Aux links open in a new tab. Default is false
+aux_links_new_tab: true
+
+# Sort order for navigation links
+# nav_sort: case_insensitive # default, equivalent to nil
+nav_sort: case_sensitive # Capital letters sorted before lowercase
+
+
+# Footer content
+# appears at the bottom of every page's main content
+
+# Footer last edited timestamp
+last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
+last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
+
+# Footer "Edit this page on GitHub" link text
+gh_edit_link: true # show or hide edit this page link
+gh_edit_link_text: "Edit this page on GitHub"
+gh_edit_repository: "https://github.com/Quashera/lilhelper.squishy.gg" # the github URL for your repo
+gh_edit_branch: "main" # the branch that your docs is served from
+# gh_edit_source: docs # the source that your files originate from
+gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
