--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Squishy's LilHelper
+title: LilHelper
 email: admin@squishy.gg
 description: >- # this means to ignore newlines until "baseurl:"
   LilHelper is a bot run by Squishy, for a few comfy communities. Its goal is to be a fully all round bot, having everything from music playback to levels and moderation features!
@@ -85,8 +85,8 @@ callouts:
 
 # Aux links for the upper right navigation
 aux_links:
-  "Bot By Squishy":
-    - "https://squishy-gg"
+  "With <3 By Squishy":
+    - "https://squishy.gg"
 
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: true
