--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ twitter_username: squishyycat
 github_username:  quashera
 
 # Build settings
+theme: just-the-docs
 remote_theme: just-the-docs/just-the-docs
 
 plugins:
