--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ github_username:  quashera
 
 # Build settings
 theme: just-the-docs
+remote_theme: just-the-docs/just-the-docs
 
 plugins:
   - jekyll-feed
