--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: admin@squishy.gg
 description: >- # this means to ignore newlines until "baseurl:"
   LilHelper is a bot run by Squishy, for a few comfy communities. Its goal is to be a fully all round bot, having everything from music playback to levels and moderation features!
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://lilhelper.squishy.gg" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: squishyycat
 github_username:  quashera
 
